# Rust

./: .gitignore  README.md  agecalculator.rs  agecalculator1.rs  agecalculator2.rs  agecalculator_cn.rs  agecalculator_cn1.rs  build_my_one_wc_tool.rs  calculator.rs  calculator1.rs  calculator_1.rs  calculator_Demo.rs  color_string.rs  command_ls.rs  command_osascript.rs  command_rm.rs  has_decimal_point.rs  httpserver.rs  password_change.rs  password_verification.rs  read_now.rs  read_now1.rs  tempCodeRunnerFile.rs  threaded_computation.rs  threaded_multiplication.rs  unicode.rs
Codility_June_2024/: num1.rs  num1_1.rs  num1_2.rs  num2.rs  num2_1.rs  tempCodeRunnerFile.rs
baidufanyi_sug/: Cargo.toml
character_interface_program/: fibonacci1.rs  fibonacci2.rs  multiplication_table_up_to_9.rs
dioxus-project/: Cargo.toml  Dioxus.toml
dioxus-project/dioxus-project/: Cargo.toml  Dioxus.toml
directories/: Cargo.toml
dirs/: Cargo.toml
gtk4-hello-world/: Cargo.toml
gtts/: Cargo.toml
gtts1/: Cargo.toml
gtts1/src/: main.rs
gtts_reqwest/: Cargo.toml
helloworld-dioxus-desktop/: Cargo.toml  Dioxus.toml
helloworld_lib/: Cargo.toml
lazy_static/: Cargo.toml
log_lib/: Cargo.toml
longbridgeapp_rust-i18n/: Cargo.toml
my-dioxus-app/: Cargo.toml
ollama/: Cargo.toml
rand_lib/: Cargo.toml
read_from_computer/: Cargo.toml
read_toml_dynamic/: Cargo.toml
rocket_app_with_html/: Cargo.toml
simple_HTTP_server/: client.rs  server.rs
simple_calculator_druid/: Cargo.toml
simple_calculator_relm4/: Cargo.toml
simple_chat_room/: client.rs  server.rs
(+68 files in other folders)
