[package]
name = "gtts1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.3.1"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde_json = "1.0.116"
my_library = "0.1.0"